--- a/views/detail.html
+++ b/views/detail.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="/public/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/public/css/main.css" />
-    <title>9Gag Like</title>
+    <title>ENICOLLA</title>
   </head>
   <body>
 
@@ -15,7 +15,7 @@
         <img src="<%= '/' + post.picture %>" alt="...">
         <div class="caption">
           <h3><%= post.title %></h3>
-          <p><%= post.author %></p>
+          <p><%= post.realisateur %></p>
         </div>
       </div>
       <div id="comments">
