--- a/views/post.html
+++ b/views/post.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="/public/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/public/css/main.css" />
-    <title>9Gag Like</title>
+    <title>ENICOLLA</title>
   </head>
   <body>
     <% include shared/menu.html %>
@@ -20,10 +20,16 @@
           <input type="text" class="form-control" name="title" placeholder="Titre">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" name="author" placeholder="Auteur">
+          <input type="text" class="form-control" name="realisateur" placeholder="Auteur">
         </div>
         <div class="form-group">
           <input type="text" class="form-control" name="category" placeholder="Categorie">
+        </div>
+         <div class="form-group">
+          <input type="text" class="form-control" name="date" placeholder="Date">
+        </div>
+          <div class="form-group">
+          <input type="textarea" class="form-control" name="synopsis" placeholder="Synopsis">
         </div>
         <div class="form-group">
           <input type="file" name="picture" class="form-control" />
