--- a/views/shared/menu.html
+++ b/views/shared/menu.html
@@ -7,15 +7,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">9Gag like</a>
+      <a class="navbar-brand" href="/">ENICOLLA</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="/category/food">Food</a></li>
-        <li><a href="/category/sport">Sport</a></li>
+        <li><a href="/category/food">Populaires</a></li>
+        <li><a href="/category/sport">Recents</a></li>
       </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/post">Ajouter un post</a></li>
+          <li><a href="/post">Ajouter un film</a></li>
+          <li><a href="/post">Connexion</a></li>
         </ul>
     </div><!--/.nav-collapse -->
 
