--- a/views/detail.html
+++ b/views/detail.html
@@ -14,8 +14,9 @@
       <div class="thumbnail">
         <img src="<%= '/' + post.picture %>" alt="...">
         <div class="caption">
-          <h3><%= post.title %></h3>
-          <p><%= post.author %></p>
+          <h3><%= post.titre %></h3>
+          <p><%= post.realisateur %></p>
+          <p><%= post.synopsis %></p>
         </div>
       </div>
       <div id="comments">
