--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="/public/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/public/css/main.css">
-    <title>9Gag Like</title>
+    <title>ENICOLLA</title>
   </head>
   <body>
 
@@ -15,8 +15,8 @@
       <div class="thumbnail">
         <img src="<%= '/' + post.picture %>" alt="...">
         <div class="caption">
-          <h3><%= post.title %></h3>
-          <p><%= post.author %></p>
+          <h3><%= post.titre %></h3>
+          <p><%= post.realisateur %></p>
           <p><a href="/post/<%= post.id %>" class="btn btn-primary" role="button">Detail</a></p>
         </div>
       </div>
