--- a/views/shared/menu.html
+++ b/views/shared/menu.html
@@ -16,7 +16,7 @@
       </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/post">Ajouter un film</a></li>
-          <li><a href="/post">Se connecter</a></li>
+          <li><a href="/login">Se connecter</a></li>
         </ul>
     </div><!--/.nav-collapse -->
 
