--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,7 @@
   <body>
 
     <% include shared/menu.html %>
+      <% include shared/cover.html %>
 
     <div class="container">
       <% posts.forEach(function(post) { %>
