--- a/views/detail.html
+++ b/views/detail.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="/public/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/public/css/main.css" />
-    <title>9Gag Like</title>
+    <title>ENICOLLA</title>
   </head>
   <body>
 
@@ -30,16 +30,28 @@
       <div>
         <form method="POST" class="horizontal-form">
           <div class="form-group">
-            <input type="text" name="pseudo" class="form-control" />
+            <input type="text" name="pseudo" class="form-control" placeholder="pseudonyme"/>
           </div>
           <div class="form-group">
-            <textarea name="comment" class="form-control"></textarea>
+            <textarea name="comment" class="form-control" placeholder="commentaire"></textarea>
+          </div>
+
+          <div class="rating">
+              <a href="#10" title="Donner 10 étoiles">☆</a>
+              <a href="#9"  title="Donner 9 étoiles">☆</a>
+              <a href="#8"  title="Donner 8 étoiles">☆</a>
+              <a href="#7"  title="Donner 7 étoiles">☆</a>
+              <a href="#6"  title="Donner 6 étoiles">☆</a>
+              <a href="#5"  title="Donner 5 étoiles">☆</a>
+              <a href="#4"  title="Donner 4 étoiles">☆</a>
+              <a href="#3"  title="Donner 3 étoiles">☆</a>
+              <a href="#2"  title="Donner 2 étoiles">☆</a>
+              <a href="#1"  title="Donner 1 étoile">☆</a>
           </div>
           <button type="submit" class="btn btn-primary">Commenter</button>
         </form>
       </div>
     </div>
-
 
   </body>
 </html>
