--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
         <div class="caption">
           <h3><%= post.titre %></h3>
           <p><%= post.realisateur %></p>
-          <p><a href="/post/<%= post.id %>" class="btn btn-primary" role="button">Detail</a></p>
+          <p><a href="/post/<%= post.id %>" class="btn btn-primary" role="button">Details</a></p>
         </div>
       </div>
       <% }) %>
