--- a/views/login.html
+++ b/views/login.html
@@ -8,15 +8,17 @@
   </head>
   <body>
 
-    <div class="container">
+    <% include shared/menu.html %>
+
+    <div class="container" item-width="500">
         <form method="POST" class="horizontal-form">
           <div class="form-group">
             <label>Login</label>
-            <input type="text" name="login" class="form-control" placeholder="Votre login"/>
+            <input type="text" name="login" class="form-control" placeholder="Votre login"></input>
           </div>
           <div class="form-group">
             <label>Mot de passe</label>
-            <input type="password" name="password" class="form-control" placeholder="Votre mot de passe"²></input>
+            <input type="password" name="password" class="form-control" placeholder="Votre mot de passe"></input>
           </div>
           <button type="submit" class="btn btn-primary">Se connecter</button>
         </form>
