--- a/views/shared/menu.html
+++ b/views/shared/menu.html
@@ -11,10 +11,11 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="/category/food">Populaires</a></li>
-        <li><a href="/category/sport">Recents</a></li>
+        <li><a href="/category/populaires">Populaires</a></li>
+        <li><a href="/category/recents">Recents</a></li>
       </ul>
         <ul class="nav navbar-nav navbar-right">
+          <li><a href="/login">Configuration</a></li>
           <li><a href="/post">Ajouter un film</a></li>
           <li><a href="/login">Se connecter</a></li>
         </ul>
